--- a/src/scss/settings/index.scss
+++ b/src/scss/settings/index.scss
@@ -3,5 +3,4 @@
 @import "../loftyshaky/shared/mods";
 @import "../loftyshaky/shared/text";
 @import "../loftyshaky/shared/crash_handler";
-@import "vars";
-@import "main";
+@import "../loftyshaky/shared/settings/index";
