feat: update shared

--- a/src/css/error.css
+++ b/src/css/error.css
@@ -19,8 +19,7 @@
 button,
 input {
   font-family: "my_font_u6Pgzb39sN0";
-  font-size: 17px;
-  color: #212121; }
+  font-size: 17px; }
 
 body,
 button {
