--- a/src/scss/loftyshaky/shared/mixins.scss
+++ b/src/scss/loftyshaky/shared/mixins.scss
@@ -42,10 +42,20 @@ $border-width: 1px;
     border: $border-width solid $blue;
 }
 
+@mixin border_bottom {
+    border-bottom-width: $border-width;
+    border-bottom-style: solid;
+}
+
 @mixin btn {
     background-color: transparent;
     outline: none;
     cursor: pointer;
     border: none;
     padding: 0;
+}
+
+@mixin input_basic {
+    border: none;
+    outline: none;
 }
