--- a/src/scss/loftyshaky/shared/vars.scss
+++ b/src/scss/loftyshaky/shared/vars.scss
@@ -2,6 +2,9 @@ $app_id: 'u6Pgzb39sN0';
 $font_name: 'my_font_' + $app_id;
 $animation_duaration: 200ms;
 $animation_mode: ease-out;
+$gap: 10px;
+$input_height: 32px;
+$label_margin_bottom: 3px;
 $black: #212121;
 $yellow: #fbff75;
 $light_orange: #fff7c7;
