feat(settings): add scss

--- a/src/scss/settings/index.scss
+++ b/src/scss/settings/index.scss
@@ -3,4 +3,7 @@
 @import "../loftyshaky/shared/mods";
 @import "../loftyshaky/shared/text";
 @import "../loftyshaky/shared/crash_handler";
+@import "../loftyshaky/shared/inputs";
+@import "../loftyshaky/shared/textareas";
+@import "../loftyshaky/shared/inset_border";
 @import "../loftyshaky/shared/settings/index";
