--- a/src/scss/loftyshaky/shared/mods.scss
+++ b/src/scss/loftyshaky/shared/mods.scss
@@ -15,3 +15,8 @@
 .opacity_0 {
     opacity: 0 !important;
 }
+
+.border {
+    border-width: 1px !important;
+    border-style: solid !important;
+}
