--- a/src/scss/loftyshaky/shared/index.scss
+++ b/src/scss/loftyshaky/shared/index.scss
@@ -3,6 +3,7 @@
 @import "mixins";
 @import "mods";
 @import "text";
+@import "scrollbar";
 @import "crash_handler";
 @import "inputs";
 @import "textareas";
