feat(settings): implement help

--- a/src/scss/loftyshaky/shared/vars.scss
+++ b/src/scss/loftyshaky/shared/vars.scss
@@ -3,6 +3,7 @@ $font_name: 'my_font_' + $app_id;
 $animation_duaration: 200ms;
 $animation_mode: ease-out;
 $gap: 10px;
+$margin: 8px;
 $input_height: 32px;
 $label_margin_bottom: 3px;
 $black: #212121;
