--- a/src/scss/loftyshaky/shared/vars.scss
+++ b/src/scss/loftyshaky/shared/vars.scss
@@ -6,6 +6,7 @@ $gap: 10px;
 $margin: 8px;
 $input_height: 32px;
 $label_margin_bottom: 3px;
+$input_content_gap: 8px;
 $black: #212121;
 $yellow: #fbff75;
 $light_orange: #fff7c7;
