--- a/src/scss/loftyshaky/shared/index.scss
+++ b/src/scss/loftyshaky/shared/index.scss
@@ -5,6 +5,8 @@
 @import "text";
 @import "scrollbar";
 @import "crash_handler";
+@import "btns";
+@import "input_btns";
 @import "inputs";
 @import "textareas";
 @import "links";
