refactor: use symlinks instead of copying files in node modules

--- a/src/scss/settings/index.scss
+++ b/src/scss/settings/index.scss
@@ -1,2 +1,2 @@
-@import "../loftyshaky/shared/index";
-@import "../loftyshaky/shared/settings/index";
+@import "../../../node_modules/@loftyshaky/shared/scss/index";
+@import "../../../node_modules/@loftyshaky/shared/scss/settings/index";
