--- a/src/scss/settings/index.scss
+++ b/src/scss/settings/index.scss
@@ -1,1 +1,6 @@
 @import '../../../node_modules/@loftyshaky/shared/scss/settings/index';
+
+.rate,
+[class*='advanced_extension_reloader_for'] {
+    display: none;
+}
